--- a/python_algorithm/pyPractice/p031to040.ipynb
+++ b/python_algorithm/pyPractice/p031to040.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1c1ae46d",
+   "id": "c26a37dd",
    "metadata": {},
    "source": [
     "### 031 문자열 합치기\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "681329a4",
+   "id": "52b624da",
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "674cba56",
+   "id": "8e249f07",
    "metadata": {},
    "source": [
     "### 032 문자열 곱하기\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6c47be8d",
+   "id": "cff07062",
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d095d12c",
+   "id": "d5e01240",
    "metadata": {},
    "source": [
     "### 033 문자열 곱하기\n",
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9946dac9",
+   "id": "11ed29c9",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4fde870",
+   "id": "bfacb38b",
    "metadata": {},
    "source": [
     "### 034 문자열 곱하기\n",
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "18fa310b",
+   "id": "de62733a",
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9e4438c",
+   "id": "f7275d71",
    "metadata": {},
    "source": [
     "### 035 문자열 출력\n",
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "002172af",
+   "id": "c15195d5",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b2415c3",
+   "id": "33ad24fe",
    "metadata": {},
    "source": [
     "### 036 문자열 출력\n",
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "94d2903d",
+   "id": "3707bec8",
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc099626",
+   "id": "2e06cf84",
    "metadata": {},
    "source": [
     "### 037 문자열 출력\n",
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "13d44401",
+   "id": "661f9fec",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f650564",
+   "id": "66f6af7b",
    "metadata": {},
    "source": [
     "### 038 컴마 제거하기\n",
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "aa66e31a",
+   "id": "3e23667c",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d125943",
+   "id": "ca706d5f",
    "metadata": {},
    "source": [
     "### 039 문자열 슬라이싱\n",
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "715f7d26",
+   "id": "d5554f13",
    "metadata": {},
    "outputs": [
     {
@@ -282,9 +282,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bc1a4681",
+   "metadata": {},
+   "source": [
+    "### 040 strip 메서드\n",
+    "문자열의 좌우의 공백이 있을 때 이를 제거해보세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "6180c45c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "삼성전자\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = \"   삼성전자    \"\n",
+    "strip = data.strip()\n",
+    "print(strip)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6404ebe5",
+   "id": "7f88c883",
    "metadata": {},
    "outputs": [],
    "source": []
