--- a/python_algorithm/pyPractice/p041to050.ipynb
+++ b/python_algorithm/pyPractice/p041to050.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ad5293dd",
+   "id": "f82e19d9",
    "metadata": {},
    "source": [
     "### 041 upper 메서드\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0008260e",
+   "id": "dbe7125d",
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "604ccfa2",
+   "id": "03605fe9",
    "metadata": {},
    "source": [
     "### 042 lower 메서드\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cba92f41",
+   "id": "f262ae36",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87975861",
+   "id": "9f5e03ed",
    "metadata": {},
    "source": [
     "### 043 capitalize 메서드\n",
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1ef4f532",
+   "id": "40af3e98",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d940985",
+   "id": "941e3e15",
    "metadata": {},
    "source": [
     "### 044 endswith 메서드\n",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9bedafb0",
+   "id": "14c76b68",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "237c04b3",
+   "id": "8d5712cd",
    "metadata": {},
    "source": [
     "### 045 endswith 메서드\n",
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "b49ebeda",
+   "id": "a72fdac3",
    "metadata": {},
    "outputs": [
     {
@@ -147,9 +147,171 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ff71b764",
+   "metadata": {},
+   "source": [
+    "### 046 startswith 메서드\n",
+    "파일 이름이 문자열로 저장되어 있을 때 startswith 메서드를 사용해서 파일 이름이 '2020'로 시작하는지 확인해보세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a8c95db7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_name = \"2020_보고서.xlsx\"\n",
+    "print(file_name.startswith(\"2020\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55dbe0e5",
+   "metadata": {},
+   "source": [
+    "### 047 split 메서드\n",
+    "다음과 같은 문자열이 있을 때 공백을 기준으로 문자열을 나눠보세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1b63cff7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hello', 'world']\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"hello world\"\n",
+    "b = a.split()\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21dc0bc6",
+   "metadata": {},
+   "source": [
+    "### 048 split 메서드\n",
+    "다음과 같이 문자열이 있을 때 btc와 krw로 나눠보세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "064d38b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['btc', 'krw']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ticker = \"btc_krw\"\n",
+    "sp = ticker.split(\"_\")\n",
+    "print(sp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7ac1dd1",
+   "metadata": {},
+   "source": [
+    "### 049 split 메서드\n",
+    "다음과 같이 날짜를 표현하는 문자열이 있을 때 연도, 월, 일로 나눠보세요"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "ad49bcdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2020', '05', '01']\n"
+     ]
+    }
+   ],
+   "source": [
+    "date = \"2020-05-01\"\n",
+    "b = date.split(\"-\")\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ab8bef7",
+   "metadata": {},
+   "source": [
+    "### 050 rstrip 메서드\n",
+    "문자열의 오른쪽에 공백이 있을 때 이를 제거해보세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "ae3e0089",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "039490\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = \"039490     \"\n",
+    "print(data.rstrip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "43f83184",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "039490\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = \"     039490\"\n",
+    "print(data.lstrip())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a884af92",
+   "id": "de9a8b83",
    "metadata": {},
    "outputs": [],
    "source": []
